--- a/.github/workflows/generated-linux-binary-manywheel-nightly.yml
+++ b/.github/workflows/generated-linux-binary-manywheel-nightly.yml
@@ -493,7 +493,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -640,7 +640,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1145,7 +1145,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1292,7 +1292,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1797,7 +1797,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1944,7 +1944,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2449,7 +2449,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2596,7 +2596,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
