--- a/.github/workflows/generated-windows-binary-conda-nightly.yml
+++ b/.github/workflows/generated-windows-binary-conda-nightly.yml
@@ -99,7 +99,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -210,7 +210,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -328,7 +328,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -440,7 +440,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -559,7 +559,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -671,7 +671,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -790,7 +790,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -902,7 +902,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1020,7 +1020,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1131,7 +1131,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1249,7 +1249,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1361,7 +1361,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1480,7 +1480,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1592,7 +1592,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1711,7 +1711,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1823,7 +1823,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1941,7 +1941,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2052,7 +2052,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2170,7 +2170,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2282,7 +2282,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2401,7 +2401,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2513,7 +2513,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2632,7 +2632,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2744,7 +2744,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2862,7 +2862,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2973,7 +2973,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3091,7 +3091,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3203,7 +3203,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3322,7 +3322,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3434,7 +3434,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3553,7 +3553,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3665,7 +3665,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
