--- a/.github/workflows/generated-windows-binary-libtorch-debug-nightly.yml
+++ b/.github/workflows/generated-windows-binary-libtorch-debug-nightly.yml
@@ -103,7 +103,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -218,7 +218,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -343,7 +343,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -458,7 +458,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -583,7 +583,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -698,7 +698,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -823,7 +823,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -938,7 +938,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1064,7 +1064,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1180,7 +1180,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1307,7 +1307,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1423,7 +1423,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1550,7 +1550,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1666,7 +1666,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1793,7 +1793,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1909,7 +1909,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2036,7 +2036,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2152,7 +2152,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2279,7 +2279,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2395,7 +2395,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2522,7 +2522,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2638,7 +2638,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2765,7 +2765,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2881,7 +2881,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3008,7 +3008,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3124,7 +3124,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3251,7 +3251,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3367,7 +3367,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3494,7 +3494,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3610,7 +3610,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3737,7 +3737,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3853,7 +3853,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
