--- a/.github/workflows/generated-linux-binary-libtorch-pre-cxx11-nightly.yml
+++ b/.github/workflows/generated-linux-binary-libtorch-pre-cxx11-nightly.yml
@@ -1133,7 +1133,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1283,7 +1283,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1433,7 +1433,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1583,7 +1583,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
