--- a/.github/workflows/generated-macos-arm64-binary-wheel-nightly.yml
+++ b/.github/workflows/generated-macos-arm64-binary-wheel-nightly.yml
@@ -87,7 +87,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -199,7 +199,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -311,7 +311,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: malfet/checkout@silent-checkout
         with:
-          ref: main
+          ref: zhuhong61:zh/fix_check_cpuabi
           submodules: recursive
           repository: pytorch/builder
           path: builder
