--- a/.github/workflows/trunk.yml
+++ b/.github/workflows/trunk.yml
@@ -1,14 +1,14 @@
 name: trunk
 
 on:
-  push:
-    branches:
-      - master
-      - main
-      - release/*
-      - landchecks/*
-    tags:
-      - ciflow/trunk/*
+  # push:
+  #   branches:
+  #     - master
+  #     - main
+  #     - release/*
+  #     - landchecks/*
+  #   tags:
+  #     - ciflow/trunk/*
   workflow_dispatch:
   schedule:
     - cron: 29 8 * * *  # about 1:29am PDT
