--- a/test/edge/CMakeLists.txt
+++ b/test/edge/CMakeLists.txt
@@ -60,6 +60,12 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "AppleClang")
   target_link_options(test_edge_op_registration PRIVATE
           "-Wl,-force_load,$<TARGET_FILE:unbox_lib>"
           )
+elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  if(APPLE)
+    target_link_options(test_edge_op_registration PRIVATE
+            "-Wl,-force_load,$<TARGET_FILE:unbox_lib>"
+            )
+  endif()
 elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
   target_link_options(test_edge_op_registration PRIVATE
           "-Wl,--whole-archive,$<TARGET_FILE:unbox_lib>,--no-whole-archive"
